Code cleanup for test